✨ SMALL FORMAT AND TEXT REHAUL ✨
Marking this push as an important one, as commission info and such may end up being added again in the future.

Also removed much text to have more focus on my art and aesthetics!

--- a/index.html
+++ b/index.html
@@ -1033,8 +1033,8 @@
 				<div class="bullet"></div>
 				<div class="text">
 					<b class="rainbow">Hiii I'm Coco/可可!!!</b> (Adult)<br />
-					I am a <b class="rainbow">CRINGE FURRY!!!</b> OC hoarder and self-taught, autistic, AroAce artist online, and attending special education irl!<br />
-					Currently telling an original story involving my Furry OCs through artworks, videos and little hints, but also have future dreams for much bigger things that have been buzzing around in my noodle for years!!! &gt;w&lt;
+					I am a <b class="rainbow">CRINGE FURRY</b> who loves to draw!<br />
+					I am an autistic adult; my website is inspired by <b class="rainbow">sensory rooms.</b> There's lots of little easter eggs to find, so I hope you have fun in your stay and happy hunting! &gt;w&lt;
 				</div>
 			</div>
 			<div class="paragraph ripples" style="animation-delay: -0.25s">
@@ -1044,60 +1044,21 @@
 					Some people know me for <b style="text-shadow: 0 0 2px #ffffff"><b style="color: #00bfff">Bloons</b><b style="color: #ff7f00">TD</b><b style="color: #ff3f00">6</b></b> (or formerly <b style="color: #ffff00; text-shadow: 0 0 2px #007fff, 0 0 2px #0000ff, 0 0 2px #0000ff">Sonic the Hedgehog</b>) through my old usernames <b class="rainbow" style="animation-delay: 1s">smudgedpasta</b> and <b class="rainbow" style="animation-delay: 1s">Illouminant</b>, but I don't mind why you're here I appreciate you nonetheless! ( •ω• ) 
 				</div>
 			</div>
-			<div class="paragraph ripples" style="animation-delay: -0.5s">
-				<div class="bullet"></div>
-				<div class="text">
-					<b class="rainbow" style="animation-delay: 2s">YES</b>: Ask me about commission exemptions (even if it says they're closed) or different art style options!<br />
-					• Show me things or ask for feedback on your art, I don't mind! :3<br />
-					• Use my art or draw my characters, just so long as you give credit and don't repost my art places for your own clout!<br />
-					• Drawing my OCs interacting with your OCs, if you think your characters would be friends with any of mine please go ahead, I'd love to see it!<br />
-					• 用中文和我聊天儿吧，我在学这个语言，会尽力的！中文俚语也没问题，不过如果我听起来有点冷请多包涵！<br />
-					• Just please remember I am very socially shy and don't start convos or consider someone a friend very easily "^-^
-				</div>
-			</div>
-			<div class="paragraph ripples" style="animation-delay: -0.75s">
-				<div class="bullet"></div>
-				<div class="text">
-					<b class="rainbow" style="animation-delay: 3s">NO</b>: Requests are usually closed and art trades are for friends only!<br />
-					• Please don't talk to me about NSFW or politics, and please ask if I am comfortable first before talking about religion<br />
-					• Please do not use disabilities and illnesses in your sense of humor around me (eg "that's acoustic", "that's cancerous", it just makes me uncomfortable!)<br />
-					• Proship and NSFW of minors (even if the minor is fictional), transid identities that harm others (eg "transracial"), generative AI, crypto/NFTS, racists/zionists/rightists, blah blah blah, that stuff is all a no from me!<br />
-					• Please don't take it personally if our friendship would be incompatible or try to pressure me into one! I do not make friends with anyone younger than my irl classmates<br />
-				</div>
-			</div>
 			<div class="paragraph ripples" style="animation-delay: -1s">
 				<div class="bullet"></div>
 				<div class="text">
-					<b class="rainbow" style="animation-delay: 4s">SOCIAL MEDIA</b>:<br />
-					<a class="glow-a" style="animation-delay: 0.0s" href="https://toyhou.se/cocobeanzies">Toyhouse</a> is for all the in-depth information on my silly litol bapeys.<br />
-					<a class="glow-a" style="animation-delay: 0.3s" href="https://reddit.com/u/cocobeanzies">Reddit</a> I pretty much just use to comment on things now LOL<br />
+					<b class="rainbow" style="animation-delay: 4s"><a class="glow-a" style="cursor: pointer" onclick="scrollTitles()">SOCIAL MEDIA</a>
+					<a class="glow-a" style="animation-delay: 0.0s" href="https://toyhou.se/cocobeanzies">Toyhouse</a> is a simple world I've developed for my silly litol bapeys<br />
+					<a class="glow-a" style="animation-delay: 0.3s" href="https://reddit.com/u/cocobeanzies">Reddit</a> I occasionally use it to talk about games or post art<br />
 					<a class="glow-a" style="animation-delay: 0.6s" href="https://cocobeanzies.tumblr.com/">Tumblr</a> is my main social media, I post everything on there!!!<br />
-					<a class="glow-a" style="animation-delay: 0.9s" href="https://youtube.com/@cocobeanzies">YouTube</a> I hope to make more animations hooray!!!!!!<br />
+					<a class="glow-a" style="animation-delay: 0.9s" href="https://youtube.com/@cocobeanzies">YouTube</a>/<a class="glow-a" style="animation-delay: 0.6s" href="https://space.bilibili.com/3546699792386313">BiliBili</a> I post my animations there. (I'm new to it!)<br />
 					<a class="glow-a" style="animation-delay: 1.2s" href="https://artfight.net/~Illouminant">Art Fight</a> WE BATTLE TO THE DEATH WUAHAHAHAHAHA<br />
-					<a class="glow-a" style="animation-delay: 1.5s" href="https://github.com/cocobeanzies">GitHub</a> just exists :P I update my Chinese study notes and stuff there.<br />
-					<a class="glow-a" style="animation-delay: 1.8s" href="https://bsky.app/profile/wavebeanzies.bsky.social">Bluesky</a> is a shared account for me and WavePlasma to evacuate Twitter.<br />
-					<a class="glow-a" style="animation-delay: 2.1s" href="https://trello.com/b/9gr2F2jz">Trello</a> is my public to-do list! Feel free to keep an eye on it if you want to see my progress through owed art but are too shy to ask for updates (mood).
+					<a class="glow-a" style="animation-delay: 1.5s" href="https://github.com/cocobeanzies">GitHub</a> just exists :P You can see the source code of this website there ooooh<br />
+					<a class="glow-a" style="animation-delay: 1.8s" href="https://bsky.app/profile/wavebeanzies.bsky.social">Bluesky</a> is Twitter evacuation (occasionally post WIPs and art)<br />
+					<a class="glow-a" style="animation-delay: 2.1s" href="https://trello.com/b/9gr2F2jz">Trello</a> is my public to-do list! Feel free to see what I am up to!
 				</div>
 			</div>
 		</div>
-	</div>
-	<div id="content3">
-		<h1 class="heading">
-			<div class="bullet"></div><span class="pulse" style="animation-delay: -6s">Art Styles</span>
-			<div class="bullet"></div><span class="pulse" style="animation-delay: -3s">Commissions</span>
-			<div class="bullet"></div>
-		</h1>
-		<div class="container">
-			All artwork examples are updated yearly, and currently all from 2025!<br />
-			Commissions are currently <span style="color: #ff7fbf">closed</span> to the public at this time!<br />
-			All prices are in USD, DM me on any <a class="glow-a" style="cursor: pointer" onclick="scrollTitles()">social platform</a> if you're interested!<br />
-			<br />
-			<b class="rainbow" style="font-size: 24px; animation-delay: -0.6s">Headshot/bust ~ $25</b><br />
-			<b class="rainbow" style="font-size: 24px; animation-delay: -0.3s">Half body ~ $40</b><br />
-			<b class="rainbow" style="font-size: 24px; animation-delay: -0.0s">Full body ~ $65</b><br />
-			<b style="color: #bf7fff; text-shadow: 0 0 2px #ffbfff">(Additional character is $10 extra)</b>
-		</div>
-		<br />
 	</div>
 	<br />
 	<br />
@@ -1571,132 +1532,31 @@ const STYLES = [
 
 /// Interests List
 const INTERESTLIST = `
-Animals & Dinosaurs
-- AntsCanada
-- Bondi Vet
-- Prehistoric Planet
-Anime
-- Another
-- Beastars
-- Death Note
-- Dragon Ball
-- Dragon Ball Z
-- Lucky Star
-- Naruto
-- Pokémon Horizons
-- Pokémon Movies
-- Pokémon Series: Black & White
-- Pokémon Series: XYZ
-- Sonic X
-- Tokyo Ghoul
-Bands/Singers
-- AURORA
-- Ark8de
-- Arrows to Athens
-- Bring Me The Horizon
-- Coldplay
-- Crown the Empire
-- Crush40
-- DM Dokuro
-- EDEN
-- Femtanyl
-- Fox Stevenson
-- Green Day
-- Guns N' Roses
-- Hatsune Miku + other vocaloids
-- Hyper Potions
-- Jack Stauber
-- Jake Hill
-- Jellyrox
-- kennyoung
-- kittydoggo
-- Laura Shigihara
-- Learke
-- Linkin Park
-- Michael Jackson
-- My Chemical Romance
-- My Little Pony songs
-- OneRepublic
-- Owl City
-- Panic! at the Disco
-- Pokémon songs + music
-- Porter Robinson
-- Prince Whateverer
-- Set It Off
-- suzie
-- Sonic the Hedgehog songs + music
-- WavePlasma :3
-- YonKaGor
-- 周杰倫 Jay Chou
-Games
-- Animal Crossing
-- Bloons Monkey City
-- Bloons TD6
-- Cave Story
-- Cuphead
-- Deltarune
-- Five Nights at Freddy's
-- Hollow Knight
-- Inscryption
-- Little Kitty, Big City
-- Mario franchise
-- Minecraft
-- Muse Dash
-- Night in the Woods
-- Oneshot
-- Placid Plastic Duck Simulator
-- Pokémon Legends
-- Pokémon Mainline Games
-- Pokémon Mobile Games
-- Pokémon Mystery Dungeon
-- Puyo Puyo Tetris 2
-- To The Moon Series
-- Sky: Children of the Light
+Current Hyperfixations
 - Sonic the Hedgehog
-- Stray
-- Terraria
-- Tetris Effect Connected
-- Tetris SNES
-- Undertale
-- Wobbledogs
-Non-Anime Shows & Movies
-- Bluey
-- Gravity Falls
-- How to Train Your Dragon
-- Interstellar
-- Lego Monkie Kid
-- Murder Drones
-- My Little Pony: A New Generation
-- My Little Pony: Friendship is Magic
-- My Little Pony: Make Your Mark
-- Sonic Prime
-- Sonic SatAM
-- Sonic the Hedgehog Paramount Movies
-- Sonic Underground
-- SpongeBob Squarepants
-- Steven Universe
-- The Adventures of Sonic the Hedgehog
-- The Amazing Digital Circus
-- The Amazing World of Gumball
-- The Cuphead Show
-- The Hunger Games
-- The Knuckles Paramount Series
-- The Lion Guard
-- The Lion King
-- YooHoo & Friends
-- Zootopia
-Misc
-- Analog Horror
-- Animation Memes
-- Fursuit Dances
-- LEGO
-- Lost Media
-- Plushie and Toys Collecting
-- Pokémon Shiny Hunting
-- Pokémon Trading Card Game
-- Roller Coasters
-- Science & Computer Science
+- Pokémon
+- Sky: Children of the Light
+- Animals
 - Space
+Other Casual Interests
+- Analog Horror
+- Animal Games
+- Animation Memes
+- Anime/Cartoons
+- Bloons Games
+- Bluey
+- Fursuit Dancers
+- Hollow Knight
+- Minecraft/Terraria
+- Music (shoutout to YonKaGor in particular, go listen to them!)
+- My Little Pony
+- Nintendo Games
+- Roller Coasters
+- Steven Universe
+- Tetris
+- The Lion King
+- Undertale/Deltarune
+- YooHoo & Friends
 `.replace(/"/g, '').split('\n').filter((fn) => { return fn.length });
 const INTERESTS = {};
 var icurr = 'N/A';
