adjust visited link colour

--- a/index.html
+++ b/index.html
@@ -872,7 +872,7 @@
 			animation: linkAnimation 7s infinite;
 		}
 		a:visited {
-			color: #00ffff;
+			color: #bf7fff;
 			animation: linkAnimation 7s infinite;
 		}
 		a:hover {
