Trying to fix this typo

--- a/index.html
+++ b/index.html
@@ -1047,7 +1047,7 @@
 			<div class="paragraph ripples" style="animation-delay: -1s">
 				<div class="bullet"></div>
 				<div class="text">
-					<b class="rainbow" style="animation-delay: 4s"><a class="glow-a" style="cursor: pointer" onclick="scrollTitles()">SOCIAL MEDIA</a>
+					<b class="rainbow" style="animation-delay: 4s"><a class="glow-a" style="cursor: pointer" onclick="scrollTitles()">SOCIAL MEDIA</a></b>><br />
 					<a class="glow-a" style="animation-delay: 0.0s" href="https://toyhou.se/cocobeanzies">Toyhouse</a> is a simple world I've developed for my silly litol bapeys<br />
 					<a class="glow-a" style="animation-delay: 0.3s" href="https://reddit.com/u/cocobeanzies">Reddit</a> I occasionally use it to talk about games or post art<br />
 					<a class="glow-a" style="animation-delay: 0.6s" href="https://cocobeanzies.tumblr.com/">Tumblr</a> is my main social media, I post everything on there!!!<br />
