more debugging attempts

--- a/index.html
+++ b/index.html
@@ -1047,7 +1047,7 @@
 			<div class="paragraph ripples" style="animation-delay: -1s">
 				<div class="bullet"></div>
 				<div class="text">
-					<b class="rainbow" style="animation-delay: 4s"><a class="glow-a" style="cursor: pointer" onclick="scrollTitles()">SOCIAL MEDIA</a></b>><br />
+					<a class="glow-a" style="cursor: pointer" onclick="scrollTitles()"><b class="rainbow" style="animation-delay: 4s">SOCIAL MEDIA</b></a><br />
 					<a class="glow-a" style="animation-delay: 0.0s" href="https://toyhou.se/cocobeanzies">Toyhouse</a> is a simple world I've developed for my silly litol bapeys<br />
 					<a class="glow-a" style="animation-delay: 0.3s" href="https://reddit.com/u/cocobeanzies">Reddit</a> I occasionally use it to talk about games or post art<br />
 					<a class="glow-a" style="animation-delay: 0.6s" href="https://cocobeanzies.tumblr.com/">Tumblr</a> is my main social media, I post everything on there!!!<br />
@@ -1079,7 +1079,7 @@
 	<div id="content4">
 		<img src="https://cocobeanzies.mizabot.xyz/pictures/Wainbow_Pee_Enn_Gee.avif" style="width: 100%; position: absolute; left: 0px; z-index: -3">
 		<div style="height: 35vw"></div>
-		<h1 class="heading"><div class="bullet"></div>Full Interests<div class="bullet"></div></h1>
+		<h1 class="heading"><div class="bullet"></div>Coco's Interests<div class="bullet"></div></h1>
 		<div id="interests" style="display: grid; line-height: 0px">
 		</div>
 		<br />
@@ -1532,23 +1532,24 @@ const STYLES = [
 
 /// Interests List
 const INTERESTLIST = `
-Current Hyperfixations
+Hyperfixations
 - Sonic the Hedgehog
 - Pokémon
 - Sky: Children of the Light
 - Animals
 - Space
-Other Casual Interests
+Casual Interests
 - Analog Horror
 - Animal Games
 - Animation Memes
-- Anime/Cartoons
+- Anime & Cartoons
 - Bloons Games
 - Bluey
+- Cave Story
 - Fursuit Dancers
 - Hollow Knight
-- Minecraft/Terraria
-- Music (shoutout to YonKaGor in particular, go listen to them!)
+- Minecraft & Terraria
+- Music (shoutout YonKaGor!)
 - My Little Pony
 - Nintendo Games
 - Roller Coasters
@@ -1571,6 +1572,7 @@ INTERESTLIST.forEach((line) => {
 
 
 // CODE STARTS HERE (only modify/delete if you know what you're doing!)
+// I gawt this >:3 *accidentally deletes system 32 on everyone who loads the website somehow*
 const displayArea = screen.width * screen.height;
 const resolution = Math.sqrt(displayArea);
 const background = document.getElementById('background');
