--- a/index.html
+++ b/index.html
@@ -1032,7 +1032,7 @@
 			<div class="paragraph ripples" style="animation-delay: 0s">
 				<div class="bullet"></div>
 				<div class="text">
-					<b class="rainbow">Hiii I'm Coco/可可!!!</b> (Adult)<br />
+					<b class="rainbow">Hiii I'm Coco/可可!!!</b><br />
 					I am a <b class="rainbow">CRINGE FURRY</b> who loves to draw!<br />
 					I am an autistic adult; my website is inspired by <b class="rainbow">sensory rooms.</b> There's lots of little easter eggs to find, so I hope you have fun in your stay and happy hunting! &gt;w&lt;
 				</div>
