ok done! yaaay!

--- a/index.html
+++ b/index.html
@@ -1543,7 +1543,7 @@ Casual Interests
 - Animal Games
 - Animation Memes
 - Anime & Cartoons
-- Bloons Games
+- Bloons
 - Bluey
 - Cave Story
 - Fursuit Dancers
@@ -1556,7 +1556,7 @@ Casual Interests
 - Steven Universe
 - Tetris
 - The Lion King
-- Undertale/Deltarune
+- Undertale & Deltarune
 - YooHoo & Friends
 `.replace(/"/g, '').split('\n').filter((fn) => { return fn.length });
 const INTERESTS = {};
