--- a/index.html
+++ b/index.html
@@ -1060,8 +1060,24 @@
 			</div>
 		</div>
 	</div>
-	<br />
-	<br />
+	<div id="content3">
+		<h1 class="heading">
+			<div class="bullet"></div><span class="pulse" style="animation-delay: -6s">Art Styles</span>
+			<!-- <div class="bullet"></div><span class="pulse" style="animation-delay: -3s">Commissions</span> -->
+			<div class="bullet"></div>
+		</h1>
+		<div class="container">
+			All artwork examples are updated yearly, and currently all from 2025!<br />
+			<!-- Commissions are currently <span style="color: #ff7fbf">closed</span> to the public at this time!<br /> -->
+			<!-- All prices are in USD, DM me on any <a class="glow-a" style="cursor: pointer" onclick="scrollTitles()">social platform</a> if you're interested!<br /> -->
+			<!-- <br /> -->
+			<!-- <b class="rainbow" style="font-size: 24px; animation-delay: -0.6s">Headshot/bust ~ $25</b><br /> -->
+			<!-- <b class="rainbow" style="font-size: 24px; animation-delay: -0.3s">Half body ~ $40</b><br /> -->
+			<!-- <b class="rainbow" style="font-size: 24px; animation-delay: -0.0s">Full body ~ $65</b><br /> -->
+			<!-- <b style="color: #bf7fff; text-shadow: 0 0 2px #ffbfff">(Additional character is $10 extra)</b> -->
+		</div>
+		<br />
+	</div>
 	<br />
 	<br />
 	<svg version="1.1" xmlns="http://www.w3.org/2000/svg" width="0" height="0" viewBox="0 0 960 540" preserveAspectRatio="xMidYMid meet">
