--- a/index.html
+++ b/index.html
@@ -1047,7 +1047,7 @@
 			<div class="paragraph ripples" style="animation-delay: -1s">
 				<div class="bullet"></div>
 				<div class="text">
-					<a class="glow-a" style="cursor: pointer" onclick="scrollTitles()"><b class="rainbow" style="animation-delay: 4s">SOCIAL MEDIA</b></a><br />
+					<a class="glow-a" style="cursor: pointer" onclick="scrollTitles()"><b class="rainbow">SOCIAL MEDIA</b></a><br />
 					<a class="glow-a" style="animation-delay: 0.0s" href="https://toyhou.se/cocobeanzies">Toyhouse</a> is a simple world I've developed for my silly litol bapeys<br />
 					<a class="glow-a" style="animation-delay: 0.3s" href="https://reddit.com/u/cocobeanzies">Reddit</a> I occasionally use it to talk about games or post art<br />
 					<a class="glow-a" style="animation-delay: 0.6s" href="https://cocobeanzies.tumblr.com/">Tumblr</a> is my main social media, I post everything on there!!!<br />
