--- a/index.html
+++ b/index.html
@@ -1051,7 +1051,7 @@
 					<a class="glow-a" style="animation-delay: 0.0s" href="https://toyhou.se/cocobeanzies">Toyhouse</a> is a simple world I've developed for my silly litol bapeys<br />
 					<a class="glow-a" style="animation-delay: 0.3s" href="https://reddit.com/u/cocobeanzies">Reddit</a> I occasionally use it to talk about games or post art<br />
 					<a class="glow-a" style="animation-delay: 0.6s" href="https://cocobeanzies.tumblr.com/">Tumblr</a> is my main social media, I post everything on there!!!<br />
-					<a class="glow-a" style="animation-delay: 0.9s" href="https://youtube.com/@cocobeanzies">YouTube</a>/<a class="glow-a" style="animation-delay: 0.6s" href="https://space.bilibili.com/3546699792386313">BiliBili</a> I post my animations there. (I'm new to it!)<br />
+					<a class="glow-a" style="animation-delay: 0.9s" href="https://youtube.com/@cocobeanzies">YouTube</a>/<a class="glow-a" style="animation-delay: 0.6s" href="https://space.bilibili.com/3546699792386313">BiliBili</a> I post my animations to (I'm new to it!)<br />
 					<a class="glow-a" style="animation-delay: 1.2s" href="https://artfight.net/~Illouminant">Art Fight</a> WE BATTLE TO THE DEATH WUAHAHAHAHAHA<br />
 					<a class="glow-a" style="animation-delay: 1.5s" href="https://github.com/cocobeanzies">GitHub</a> just exists :P You can see the source code of this website there ooooh<br />
 					<a class="glow-a" style="animation-delay: 1.8s" href="https://bsky.app/profile/wavebeanzies.bsky.social">Bluesky</a> is Twitter evacuation (occasionally post WIPs and art)<br />
