--- a/index.html
+++ b/index.html
@@ -1487,6 +1487,7 @@ const STYLES = [
 "Full of Pizzer.webp"
 "Fruffernie!!!.webp"
 "Aster.webp"
+"Lilac.webp"
 `.replace(/"/g, '').split('\n').filter((fn) => { return fn.length }),
 		shuffle: true
 	}, {
